[CSS] Fix  operations list actions buttons overflow

--- a/client/css/ui/tables.css
+++ b/client/css/ui/tables.css
@@ -97,10 +97,13 @@ table caption .actions {
     text-align: right;
     font-size: 12px;
     margin-left: 2em;
+    white-space: nowrap;
+    display: flex;
 }
 
 table caption .actions > * {
     margin-right: 1em;
+    white-space: normal;
 }
 
 table caption .actions > :last-child {
